[package]
name = "suivanity"
version = "0.1.0"
edition = "2021"
description = "High-performance Sui vanity address generator"
license = "MIT"

[dependencies]
anyhow = "1.0"
bech32 = "0.11"
bip39 = "2.1"
blake2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2.1"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"

[profile.release]
codegen-units = 1
lto = true
strip = true
